# azrustyclint

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: azure-deploy.yml  build-sandbox-images.yml  cd.yml  ci.yml  dependency-review.yml  deploy-frontend.yml
config/: default.toml
crates/api-gateway/: Cargo.toml
crates/api-gateway/src/: auth.rs  config.rs  main.rs  state.rs
crates/api-gateway/src/routes/: files.rs  mod.rs  projects.rs  sandbox.rs  users.rs  ws.rs
crates/collab/: Cargo.toml
crates/collab/src/: awareness.rs  document.rs  document_test.rs  lib.rs  room.rs  sync.rs
crates/common/: Cargo.toml
crates/common/src/: db.rs  db_test.rs  error.rs  lib.rs  models.rs
crates/lsp-proxy/: Cargo.toml
crates/lsp-proxy/src/: lib.rs  manager.rs  proxy.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: container.rs  executor.rs  lib.rs  limits.rs  limits_test.rs
docker/: sandbox-base.Dockerfile  sandbox-cpp.Dockerfile  sandbox-go.Dockerfile  sandbox-java.Dockerfile  sandbox-node.Dockerfile  sandbox-python.Dockerfile  sandbox-rust.Dockerfile
docs/: azure-deployment.md
frontend/: .env.production  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CodeEditor.tsx  Collaborators.tsx  ErrorBoundary.tsx  FileTree.tsx  LoadingSpinner.tsx  OutputPanel.tsx  SettingsPanel.tsx  Terminal.tsx  Toast.tsx  VideoChat.tsx
frontend/src/components/__tests__/: ErrorBoundary.test.tsx  LoadingSpinner.test.tsx  Toast.test.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts
frontend/src/lib/: api.ts  lspClient.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Landing.tsx  Login.tsx  Register.tsx
frontend/src/stores/: auth.ts  editor.ts  settings.ts
frontend/src/stores/__tests__/: auth.test.ts  editor.test.ts
frontend/src/styles/: landing.css
frontend/src/test/: setup.ts  utils.tsx
frontend/src/test/mocks/: handlers.ts
frontend/src/types/: index.ts
infra/azure/: main.bicep  main.parameters.json
infra/azure/modules/: acr.bicep  aks.bicep  postgres.bicep  redis.bicep  storage.bicep
infra/e2e/: docker-compose.e2e.yml  nginx.conf  run-e2e.ps1  run-e2e.sh
infra/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  secrets.yaml  service.yaml
infra/prod/: .env.example  README.md  deploy.sh  docker-compose.prod.yml  nginx.conf
migrations/: 001_initial.sql
