[workspace]
resolver = "2"
members = [
    "crates/api-gateway",
    "crates/collab",
    "crates/sandbox",
    "crates/lsp-proxy",
    "crates/common",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/rustyclint"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
redis = { version = "0.32", features = ["tokio-comp", "connection-manager"] }

# CRDT for collaboration
yrs = "0.25"
y-sync = "0.4"

# Docker
bollard = "0.19"

# Auth
jsonwebtoken = "10"
argon2 = "0.5"

# WebRTC signaling
webrtc = "0.9"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.15"
