[package]
name = "rustyclint-api-gateway"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rustyclint"
path = "src/main.rs"

[dependencies]
rustyclint-common = { path = "../common" }
rustyclint-collab = { path = "../collab" }
rustyclint-sandbox = { path = "../sandbox" }
rustyclint-lsp-proxy = { path = "../lsp-proxy" }

tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
config.workspace = true
futures-util = "0.3"
async-trait = "0.1"
